fix z-index on loading

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,4 +28,5 @@ div.loading, div.generating-teams {
   border: 1px solid #1E824C;
   border-radius: 2px;
   display: none;
+  z-index: 1;
 }
